<resources>
    <string name="app_name">Visual Exhibition</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_topic">Chủ Đề</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_splash">TRIỂN LÃM\nĐẢNG CỘNG SẢN\nVIỆT NAM</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading...</string>
    <string name="loi_bac">Non sông Việt Nam có\ntrở nên tươi đẹp hay\nkhông, dân tộc Việt Nam\ncó bước tới đài vinh quang\nđể sánh vai với các cường\nquốc năm châu được hay\nkhông, chính là nhờ một\nphần lớn ở công học tập\ncủa các cháu.</string>
    <string name="bac_kinh_yeu">- Bác Hồ Kính Yêu</string>
    <string name="search_title">Tìm kiếm tài liệu, bài viết, .....</string>
    <string name="topic">CHỦ ĐỀ</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save">Lưu</string>
    <string name="add_image">Thêm ảnh</string>
    <string name="adđ_images">Thêm nhiều ảnh</string>
    <string name="select_template">Chọn Mẫu</string>
</resources>