<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_topic">

    <fragment
        android:id="@+id/nav_topic"
        android:name="com.seo.visualexhibition.ui.topic.TopicFragment"
        android:label="@string/menu_topic"
        tools:layout="@layout/fragment_topic" />

    <fragment
        android:id="@+id/nav_template"
        android:name="com.seo.visualexhibition.ui.template.TemplateFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_template" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.seo.visualexhibition.ui.image.ImageFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_image" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.seo.visualexhibition.ui.event.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>